Updated styles.css to fix overflow issue

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@ box-sizing : "border-box";
 font-family:"Poppins", sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .hero-section{
 background: url(/zomato-landing-page-10722/images/heroSectionBackground.png);
 background-size: cover;
